--- a/package.json
+++ b/package.json
@@ -4,9 +4,9 @@
   "private": true,
   "dependencies": {
     "@metamask/detect-provider": "^1.2.0",
-    "@remixproject/plugin": "^0.3.8",
-    "@remixproject/plugin-api": "^0.3.8",
-    "@remixproject/plugin-webview": "^0.3.8",
+    "@remixproject/plugin": "0.3.11-alpha.1",
+    "@remixproject/plugin-api": "0.3.11-alpha.1",
+    "@remixproject/plugin-webview": "0.3.11-alpha.1",
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
