--- a/package.json
+++ b/package.json
@@ -36,7 +36,7 @@
     "prettier": "prettier --write --config ./.prettierrc \"**/*.{ts,tsx}\"",
     "lint": "eslint './src/**/*.{ts,tsx}'",
     "lint:fix": "eslint --fix './src/**/*.{ts,tsx}'",
-    "publish-pages": "rm -fr docs && cp build docs"
+    "publish-pages": "rm -fr docs && cp -R build docs"
   },
   "eslintConfig": {
     "extends": [
